# MSAGen

./: .amltignore  .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  azure-static-web-apps-icy-rock-00fce0c10.bk  barrier.py  blob-config.yaml  infer.ipynb  pyproject.toml  setup.bk  setup.cfg  setup.py  setup_backup.py  setup_cython.py
.ci/: build-deploy.yaml  pre-commit.yaml  unit-tests.yaml
SFM.egg-info/: SOURCES.txt
amlt/: ds_18B_copilot.yaml  ds_20Ba.yaml  ft_copilot_70B100M.yaml  infer_18B_copilot.yaml  pretrain_copilot_18B.yaml
amlt/decoder/: finetune_deepfuse_run1.yaml
amlt/genegpt/: pretrain_genegpt_100m_6mer_160k.yaml  pretrain_genegpt_100m_6mer_160k_3d.yaml  pretrain_genegpt_100m_6mer_2k_3d.yaml  pretrain_genegpt_1b_6mer_4k_3d.yaml  pretrain_genegpt_1b_6mer_8k_3d.yaml  pretrain_genegpt_base1b_6mer_16k.yaml  pretrain_genegpt_base1b_6mer_16k_3d.yaml  pretrain_genegpt_base1b_6mer_16k_test.yaml  test_genegpt_1b_6mer_160k.yaml
amlt/generalist/: ft_copilot_70B100M copy.yaml  ft_copilot_70B100M.yaml  ft_copilot_70B22B.yaml  ft_copilot_70B22B_cube.yaml
amlt/genereg/: genereg_jiaying.yaml
amlt/nlm/: eval_nlm_moe_ppl.yaml  finetune_150B_nlm1b_G64.yaml  finetune_150B_nlm1b_G64_ratio.yaml  finetune_cmpd_nlm1b_G32.yaml  finetune_cmpd_text_nlm1b_G32.yaml  finetune_dna_nlm1b_G32.yaml  finetune_nlm_1b_matbench.yaml  finetune_nlm_1b_matbench_amd.yaml  finetune_nlm_8x7b_inst.20240524.yaml  finetune_nlm_8x7b_inst.20240617.yaml  finetune_nlm_8x7b_inst.20240718.yaml  finetune_nlm_8x7b_inst.t2d.yaml  finetune_nlm_8x7b_inst.uspto50k.yaml  finetune_nlm_llama3_1T_inst_1b.yaml  finetune_nlm_llama3_inst.yaml  (+47 more)
config_file/: PSM1B_DIT.yaml  PSM1B_V0.yaml  PSM1B_VT.yaml  PSM1B_exp3.yaml  PSM1B_unify.yaml  PSM300M_DIT.yaml  PSM300M_V0.yaml  PSM300M_VT.yaml  PSM3B_DIT.yaml  PSM3B_exp3.yaml  PSM3B_unify.yaml  PSM9B_exp3.yaml  config_msagen_100M.yaml  config_msagen_1B.yaml  config_msagen_200M.yaml  config_msagen_local_run.yaml  config_psm.yaml  ds_config.json  ds_config_ft.json  ds_config_pp.json  ds_config_stage1.json  ds_config_stage3.json  eval_config.json  psm_v0.yaml
docker/: Dockerfile  build.sh  conda_install.sh
docs/: Makefile
infer_script/: infer.ipynb  infer_full_70b.ipynb
install/: environment.yaml  install.sh  install_megatron.sh  install_pfm.sh  install_third_party.sh  py310-torch2.2.2-cuda12.1.yaml  py39-torch2.2.2-cuda12.1.yaml  requirements.txt
megatron/: __init__.py  arguments.py  checkpointing.py  enums.py  global_vars.py  indexer.py  initialize.py  p2p_communication.py  text_generation_server.py  text_generation_utils.py  timers.py  training.py
prof/: profiler_ds.txt
requirements/: requirements.txt  requirements_train.txt
scripts/: ft_graphormer.sh  ft_graphormer_llama_smiles.sh  ft_graphormerllama.sh  ftmp_graphormer_llama_smiles.sh  pretrain_graphormer.sh  pretrain_graphormerPP.sh  pretrain_scigptmoe_debug.sh
sfm/: infer.ipynb
source/: conf.py  index.rst
tests/: test_data.py  test_physics.ipynb  test_trainer.py
tools/: args2yaml.py  checkpoint_loader_megatron.py  checkpoint_saver_megatron.py  checkpoint_util.py  generate_samples_gpt.py  linter.py  merge_datasets.py  preprocess_data.py  preprocess_data_nmt.py  run_text_generation_server.py  sync.sh  text_generation_cli.py
tutorials/: README.md
webdemo/: .gitignore  README.md  examples.py  main.py  start_chat_1b_3vs1_demo.sh  start_chat_8b_1vs1_demo.sh  start_chat_8b_3vs1_demo.sh  start_chat_demo.sh  start_chat_demo_0.sh  start_chat_demo_1.sh  start_completion_demo.sh
(+3860 files in other folders)
