[build-system]
requires = ["setuptools>=61.0", "numpy", "Cython==0.29.32"]
build-backend = "setuptools.build_meta"

[project]
name = "a4sframework"
version = "0.1.0"
authors = [
  { name="MSRA4S" },
]
description = "A package for building science foundation model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://dev.azure.com/AI4ScienceSFM/SFM_framework"
repository = "https://AI4ScienceSFM@dev.azure.com/AI4ScienceSFM/SFM_framework/_git/SFM_framework"
documentation = "https://super-adventure-59315m6.pages.github.io/"
