[build-system]
requires = ["setuptools>=61.0", "numpy", "Cython==0.29.32", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "a4sframework"
authors = [
  { name="MSRA4S" },
]
description = "A package for building science foundation model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'torch-geometric==2.3.0',
  'deepspeed==0.10.0',
  'ogb==1.3.6',
  'rdkit-pypi==2021.9.3',
  'rdkit==2023.3.3',
  'tensorboard',
  'numba',
  'Cython==0.29.32',
  'torchvision==0.16.0',
  'torcheval',
  'networkx',
  'lmdb',
  'mlflow',
  'azureml-mlflow',
  'wandb',
  'loguru',
  'transformers==4.34.0',
  'peft',
  'sentencepiece',
  'sacremoses',
  'mendeleev',
  'biopython',
  'torch==2.1.0'
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  'flake8',
  'pytest',
  'black==22.3.0'
]
docs = [
  'sphinx',
  'sphinx-argparse'
]

[project.urls]
homepage = "https://dev.azure.com/AI4ScienceSFM/SFM_framework"
repository = "https://AI4ScienceSFM@dev.azure.com/AI4ScienceSFM/SFM_framework/_git/SFM_framework"
documentation = "https://super-adventure-59315m6.pages.github.io/"
