[build-system]
requires = ["setuptools>=61.0", "numpy", "Cython==0.29.32", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "a4sframework"
authors = [
  { name="MSRA4S" },
]
description = "A package for building science foundation model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'torch==2.2.2',
    'torchvision==0.17.2',
    'torchaudio==2.2.2',
    'biopython==1.83',
    'ogb==1.3.6',
    'wandb==0.16.5',
    'networkx==3.2.1',
    'lmdb==1.4.1',
    'dm-tree==0.1.8',
    'tensorboard==2.16.2',
    'loguru==0.7.2',
    'transformers==4.39.3',
    'mendeleev==0.15.0',
    'sentencepiece==0.2.0',
    'peft==0.10.0',
    'setuptools-scm==8.0.4',
    'cython==3.0.10',
    'torch_geometric==2.5.2',
    'torch-tb-profiler==0.4.3',
    'deepspeed==0.14.0',
    'packaging==23.2',
    'ninja==1.11.1.1',
    'pip==24.0',
    "sacremoses==0.1.1"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  'flake8',
  'pytest',
  'black==22.3.0'
]
docs = [
  'sphinx',
  'sphinx-argparse'
]

[project.urls]
homepage = "https://dev.azure.com/AI4ScienceSFM/SFM_framework"
repository = "https://AI4ScienceSFM@dev.azure.com/AI4ScienceSFM/SFM_framework/_git/SFM_framework"
documentation = "https://super-adventure-59315m6.pages.github.io/"
